added image to web

--- a/Test.html
+++ b/Test.html
@@ -6,6 +6,7 @@
     <title>Test for Github</title>
 </head>
 <body>
+    <img src="1.jpg" alt="">
     <h2>Welcome to my site</h2>
 </body>
 </html>
